Fixing page width overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,7 @@ body {
   background: var(--background);
   font-family: "Roboto";
 }
+
+* {
+  max-width: 100%;
+}
